 * Disabled "ChangeSelectionColor" in all KDE color schemes because of its buggy behavior.
 * Respect lack of `scaledContents` in `QLabel` with large pixmaps (don't scale down large label images when they aren't supposed to be scaled).
 * Don't try to animate frameless scroll-areas.
 * Changed the default layout spacing to 3px.

V1.0.2
---------
 * Added "widgets" to "style.pro" for Qt ≥ 6.2.4.
 * Don't set the active/inactive palettes of item views (when they are shown/activated/deactivated) if the inactive state is ignored.
 * Force palettes (of item views) on event filtering only if needed.
 * Apply blurring to the whole rectangles of menus/tooltips that aren't drawn by Kvantum.
 * Workarounds for issues in LibreOffice's Qt skin (guarantee opaque backgrounds for LibreOffice's spin-boxes and editable combo-boxes, work around bugs in tab positions, and give enough space to tabs and spinboxes).
 * Allow translucency in Qt widgets with LibreOffice.
 * Added a workaround for QML tool buttons.
 * Added a warning dialog that shows up when the user enables kinetic scrolling.

V1.0.1
---------
 * Added a workaround for the wrong style code of "KisDoubleSliderSpinBox" in Krita 5.0.0.
 * Fixed drawing of separate arrow indicators on tool buttons in rare cases.
 * Give 16px to the width of vertical spinbox buttons.
 * Don't change the palette of a menu because of its toolbar parent. (This is mostly for Qt6. For some reason, no problem happened without it in Qt5.)
 * Never assign a separate theme to Kvantum manager and kvantumpreview.
 * Added options (to Kvantum Manager) for setting corner radii when blurring translucent menus and tooltips with rounded corners.
 * To find the sunken button that has triggered a menu, check whether it really has a menu (in addition to checking of its sunken state).
 * Don't enforce window size grip without layout (which is possible in very rare cases).
 * Bumped the minimum required version of Qt to 5.15.0 and that of KF5 to 5.82.0.

V1.0.0